[package]
name = "solana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
turbo = { version = "*", package = "turbo-genesis-sdk" }
serde = { version = "1.0", features = ["derive"] }

[lib]
crate-type = ["cdylib"]
